k8s-centit-workorder.yaml
apiVersion: v1
kind: Service
metadata:
  name: workorder
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 19000
  selector:
    app: workorder
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: workorder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workorder
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: workorder
    spec:
      containers:
      - name: workorder
        image: 172.29.0.13:8082/workorder:<BUILD_TAG>
        imagePullPolicy: Always
        volumeMounts:
        - name: time-zone
          mountPath: /etc/localtime
        - name: tomcat-logs
          mountPath: /usr/local/tomcat/logs
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-secret
      volumes:
      - name: time-zone
        hostPath:
          path: /etc/localtime
      - name: tomcat-logs
        hostPath:
          path: /data/tomcat/logs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workorder
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: framework.centit.com
    http:
      paths:
        - path: /workorder
        backend:
          serviceName: workorder
          servicePort: 8080
  tls:
  - hosts:
    - framework.centit.com
    secretName: nginx-test
